--- a/src/app/modules/admin/admin-components/dashboard/dashboard.component.css
+++ b/src/app/modules/admin/admin-components/dashboard/dashboard.component.css
@@ -38,3 +38,18 @@
   position: relative;
   bottom: 10px;
 }
+
+.spinner {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+}
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Adjust this value as needed */
+}
