--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,6 +65,17 @@
           <br>
 
           <li class="nav-item">
+            <a routerLink="/admin/add_hr" routerLinkActive="active" class="nav-link">
+              <i class="nav-icon fas fa-users"></i>
+              <p>
+                Add Hr
+              </p>
+            </a>
+          </li>
+
+          <br>
+
+          <li class="nav-item">
             <a routerLink="/admin/vacations" routerLinkActive="active" class="nav-link">
               <i class="nav-icon far fa-calendar-alt"></i>
               <p>
