--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,7 +68,7 @@
             <a routerLink="/admin/add_hr" routerLinkActive="active" class="nav-link">
               <i class="nav-icon fas fa-users"></i>
               <p>
-                Add Hr
+                Human Resources
               </p>
             </a>
           </li>
