--- a/src/app/modules/admin/admin-components/all-vacations/all-vacations.component.html
+++ b/src/app/modules/admin/admin-components/all-vacations/all-vacations.component.html
@@ -24,7 +24,7 @@
 
               <div class="empl">
                 <button  style='margin-left:-40px'  type="button" class="btn btn-warning dropdown-toggle " data-toggle="dropdown" >
-                  Status
+                  Filter : Status
                 </button>
                 <ul class="dropdown-menu">
                   <li class="dropdown-item" *ngFor="let status of statuses" (click)="filterByStatus(status)" >{{ status }}</li>
