--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,12 +30,28 @@
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
 
         <div class="info">
-          <a href="#" class="d-block">ADMIN </a>
+          <a class="d-block"  style='margin-left:20px'>
+            <img src="assets/plugins/finlogik2.png" style="width:170px; height:30px;">
+          </a>
         </div>
       </div>
 
+
       <!-- SidebarSearch Form -->
 
+
+      <div class="form-inline">
+        <div class="input-group" data-widget="sidebar-search">
+          <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
+          <div class="input-group-append">
+            <button class="btn btn-sidebar">
+              <i class="fas fa-search fa-fw"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <br>
       <!-- Sidebar Menu -->
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
@@ -64,16 +80,6 @@
 
           <br>
 
-          <li class="nav-item">
-            <a routerLink="/admin/add_hr" routerLinkActive="active" class="nav-link">
-              <i class="nav-icon fas fa-users"></i>
-              <p>
-                Human Resources
-              </p>
-            </a>
-          </li>
-
-          <br>
 
           <li class="nav-item">
             <a routerLink="/admin/vacations" routerLinkActive="active" class="nav-link">
@@ -129,12 +135,26 @@
 
 
         <div class="info">
-          <a  class="d-block" style='margin-left:50px'>Welcome {{ this.employeeName}} </a>
+            <a class="d-block"  style='margin-left:20px'>
+              <img src="assets/plugins/finlogik2.png" style="width:170px; height:30px;">
+            </a>
         </div>
       </div>
 
-
       <!-- SidebarSearch Form -->
+
+      <div class="form-inline">
+        <div class="input-group" data-widget="sidebar-search">
+          <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
+          <div class="input-group-append">
+            <button class="btn btn-sidebar">
+              <i class="fas fa-search fa-fw"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <br>
 
       <!-- Sidebar Menu -->
       <nav class="mt-2">
