--- a/src/app/modules/employee/employee-components/dashboard/dashboard.component.css
+++ b/src/app/modules/employee/employee-components/dashboard/dashboard.component.css
@@ -19,3 +19,15 @@
   bottom: 10px;
 }
 
+.btn-primary {
+  color: #fff;
+  background-color: #b2c826;
+  border-color: #b2c826;
+  box-shadow: none;
+}
+
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
+  background-color:#9fb322;
+  border-color: #9fb322;
+  color: white;
+}
