--- a/src/app/modules/employee/employee-components/get-all-vacations/get-all-vacations.component.html
+++ b/src/app/modules/employee/employee-components/get-all-vacations/get-all-vacations.component.html
@@ -33,8 +33,8 @@
                 <tr *ngFor="let vacation of slicedData; let i = index">
                   <td>{{ pageEvent.pageIndex * pageEvent.pageSize + i + 1 }}</td>
                   <td>{{ vacation.type }}</td>
-                  <td>{{ vacation.sd | date: 'd/MMM/y' }}</td>
-                  <td>{{ vacation.ed | date: 'd/MMM/y' }}</td>
+                  <td>{{ vacation.sd | date: 'd/MMM/y | H:mm' :'UTC' }}</td>
+                  <td>{{ vacation.ed | date: 'd/MMM/y | H:mm' :'UTC' }}</td>
                   <td><strong [ngStyle]="{'color': vacation.vacationStatus === 'Approved' ? '#5fbd00' : vacation.vacationStatus === 'Disapproved' ? '#f8007c' : '#F4C430'}"> {{ vacation.vacationStatus}} </strong> </td>
                   <td>
                     <a *ngIf="vacation.vacationStatus === 'Pending'" style='margin-right:16px' class="btn btn-sm btn-info" ><i class="fas fa-pencil-alt" [routerLink]="['/employee/vacation', vacation.id]"></i>Edit</a>
